[gd_scene load_steps=38 format=3 uid="uid://cn7kypjs1yt8q"]

[ext_resource type="Script" path="res://cenas/New_game/new_save/New_save.gd" id="1_17lxv"]
[ext_resource type="Texture2D" uid="uid://bk127b1h5p0ai" path="res://cenas/New_game/new_save/bg.png" id="2_ivj2q"]
[ext_resource type="Texture2D" uid="uid://ba6lamnxhti3e" path="res://Player/sprite/player.png" id="4_86qbb"]
[ext_resource type="Texture2D" uid="uid://cg05drb56virj" path="res://cenas/New_game/classes/Orc.png" id="5_qd147"]
[ext_resource type="Texture2D" uid="uid://dqp60u2klim33" path="res://cenas/New_game/classes/Soldier.png" id="6_itkqh"]
[ext_resource type="Theme" uid="uid://cto6y30lw8att" path="res://cenas/New_game/new_save/new_player.tres" id="12_novo3"]
[ext_resource type="ButtonGroup" uid="uid://bdrq2ear0o7l8" path="res://cenas/New_game/new_save/class_button_group.tres" id="13_njsla"]

[sub_resource type="AtlasTexture" id="AtlasTexture_twqc3"]
atlas = ExtResource("4_86qbb")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_te2vg"]
atlas = ExtResource("4_86qbb")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxo62"]
atlas = ExtResource("4_86qbb")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls5oc"]
atlas = ExtResource("4_86qbb")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_drsqr"]
atlas = ExtResource("4_86qbb")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h40ei"]
atlas = ExtResource("4_86qbb")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqo8x"]
atlas = ExtResource("5_qd147")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_513cc"]
atlas = ExtResource("5_qd147")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_53jge"]
atlas = ExtResource("5_qd147")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp3cw"]
atlas = ExtResource("5_qd147")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfoc2"]
atlas = ExtResource("5_qd147")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_to51g"]
atlas = ExtResource("5_qd147")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlp5t"]
atlas = ExtResource("6_itkqh")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8elp5"]
atlas = ExtResource("6_itkqh")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkmp3"]
atlas = ExtResource("6_itkqh")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg8tu"]
atlas = ExtResource("6_itkqh")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_174rc"]
atlas = ExtResource("6_itkqh")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nklmn"]
atlas = ExtResource("6_itkqh")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_80c87"]
atlas = ExtResource("4_86qbb")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4gic"]
atlas = ExtResource("4_86qbb")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_13ihm"]
atlas = ExtResource("4_86qbb")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wleq3"]
atlas = ExtResource("4_86qbb")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u4v8"]
atlas = ExtResource("4_86qbb")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc4os"]
atlas = ExtResource("4_86qbb")
region = Rect2(240, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_o7gtw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_twqc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te2vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxo62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls5oc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drsqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h40ei")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqo8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_513cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53jge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp3cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfoc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_to51g")
}],
"loop": true,
"name": &"goblin",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlp5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8elp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkmp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg8tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_174rc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nklmn")
}],
"loop": true,
"name": &"human",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80c87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4gic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13ihm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wleq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u4v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc4os")
}],
"loop": true,
"name": &"mage",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wh57q"]
bg_color = Color(0, 0, 0, 0.160784)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u5b83"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tsybd"]
bg_color = Color(0, 0, 0, 0.282353)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qlr00"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dtmwy"]

[node name="New_Save" type="Control" node_paths=PackedStringArray("name_input", "animation", "label_class")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_17lxv")
name_input = NodePath("VBoxContainer/name")
animation = NodePath("MarginContainer/CenterContainer/AnimatedSprite2D")
label_class = NodePath("class")
metadata/_edit_horizontal_guides_ = [181.0]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ivj2q")
expand_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.397
anchor_top = 0.36
anchor_right = 0.589
anchor_bottom = 0.724
offset_left = -0.344025
offset_top = -0.280014
offset_right = -0.528076
offset_bottom = -0.152039

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MarginContainer/CenterContainer"]
position = Vector2(78, 48)
scale = Vector2(8.44963, 8.30964)
sprite_frames = SubResource("SpriteFrames_o7gtw")
animation = &"goblin"
frame_progress = 0.0312997

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.648
anchor_top = 0.279
anchor_right = 0.936
anchor_bottom = 0.787
offset_left = -0.495972
offset_top = 0.207993
offset_right = -0.271973
offset_bottom = 0.0239563

[node name="name" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
placeholder_text = "Nome..."
alignment = 1
max_length = 16

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Status"
horizontal_alignment = 1

[node name="class" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.422
anchor_top = 0.31
anchor_right = 0.52
anchor_bottom = 0.387
offset_left = -0.144012
offset_top = 0.119995
offset_right = -0.0400391
offset_bottom = 0.223984
theme_override_font_sizes/font_size = 36
text = "Goblin"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.415
anchor_top = 0.873
anchor_right = 0.53
anchor_bottom = 0.991
offset_left = -0.0800171
offset_top = 0.295959
offset_right = -0.560059
offset_bottom = -0.16803
text = "Create"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.029
anchor_top = 0.318
anchor_right = 0.311
anchor_bottom = 0.742
offset_left = -0.407997
offset_top = -0.0639954
offset_right = -0.272034
offset_bottom = 0.18396
theme_override_styles/panel = SubResource("StyleBoxFlat_wh57q")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_u5b83")

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_tsybd")

[node name="text_class" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_qlr00")
text = "      Escolha sua classe      "
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_dtmwy")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 42
theme_override_constants/margin_right = 22

[node name="VboxClass" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Button1" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/VboxClass"]
layout_mode = 2
theme = ExtResource("12_novo3")
toggle_mode = true
keep_pressed_outside = true
button_group = ExtResource("13_njsla")
text = "Human"
alignment = 0

[node name="HSeparator5" type="HSeparator" parent="PanelContainer/VBoxContainer/MarginContainer/VboxClass"]
layout_mode = 2
theme = ExtResource("12_novo3")

[node name="Button2" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/VboxClass"]
layout_mode = 2
theme = ExtResource("12_novo3")
toggle_mode = true
button_group = ExtResource("13_njsla")
text = "Globin"
alignment = 0

[node name="HSeparator4" type="HSeparator" parent="PanelContainer/VBoxContainer/MarginContainer/VboxClass"]
layout_mode = 2
theme = ExtResource("12_novo3")

[node name="Button3" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/VboxClass"]
layout_mode = 2
theme = ExtResource("12_novo3")
toggle_mode = true
button_group = ExtResource("13_njsla")
text = "Mage"
alignment = 0

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer/MarginContainer/VboxClass"]
layout_mode = 2
theme = ExtResource("12_novo3")

[node name="Button4" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/VboxClass"]
layout_mode = 2
theme = ExtResource("12_novo3")
toggle_mode = true
button_group = ExtResource("13_njsla")
text = "Guerreiro"
alignment = 0

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer/MarginContainer/VboxClass"]
layout_mode = 2
theme = ExtResource("12_novo3")

[node name="Button5" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer/VboxClass"]
layout_mode = 2
theme = ExtResource("12_novo3")
toggle_mode = true
button_group = ExtResource("13_njsla")
text = "Guerreiro"
alignment = 0

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/MarginContainer/VboxClass"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.02
theme = ExtResource("12_novo3")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/VboxClass/Button1" to="." method="btn_class_1"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/VboxClass/Button2" to="." method="btn_class_2"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/VboxClass/Button3" to="." method="btn_class_3"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/VboxClass/Button4" to="." method="btn_class_4"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/VboxClass/Button5" to="." method="btn_class_5"]
